--- a/package.json
+++ b/package.json
@@ -13,13 +13,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "image-trace-loader": "^1.0.2",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^8.0.0",
     "next": "9.5.1",
-    "next-compose-plugins": "^2.2.0",
-    "next-optimized-images": "^2.6.2",
+    "next-images": "^1.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
