--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "lint": "eslint . --fix  --ext .js"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "framer-motion": "^2.3.0",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "next": "9.5.1",
     "next-images": "^1.4.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
