--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@material-ui/styles": "^4.10.0",
     "framer-motion": "^2.3.0",
     "graphql": "^15.3.0",
-    "graphql-tag": "^2.11.0",
     "next": "9.5.1",
     "next-images": "^1.4.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "shopify-buy": "^2.11.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
