--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@material-ui/styles": "^4.10.0",
     "framer-motion": "^2.5.5",
     "graphql": "^15.3.0",
-    "next": "9.5.1",
+    "next": "^9.5.3-canary.23",
     "next-images": "^1.4.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
