--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "lint": "eslint . --fix  --ext .js"
   },
   "dependencies": {
-    "@apollo/client": "^3.1.3",
+    "@apollo/client": "^3.1.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
-    "framer-motion": "^2.5.5",
+    "framer-motion": "^2.6.6",
     "graphql": "^15.3.0",
-    "next": "^9.5.3-canary.23",
+    "next": "^9.5.3",
     "next-images": "^1.4.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "shopify-buy": "^2.11.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.11.1",
-    "eslint": "^7.7.0",
+    "eslint": "^7.8.1",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
