--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-intersection-observer": "^8.28.6",
     "shopify-buy": "^2.11.0",
     "styled-components": "^5.2.0"
   },
