--- a/package.json
+++ b/package.json
@@ -6,34 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --fix  --ext .js"
   },
   "dependencies": {
-    "@apollo/client": "^3.1.4",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.10.0",
-    "framer-motion": "^2.6.6",
-    "graphql": "^15.3.0",
-    "next": "^9.5.3",
-    "next-images": "^1.4.1",
-    "notistack": "^1.0.0",
+    "@apollo/client": "^3.3.4",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.2",
+    "framer-motion": "^2.9.5",
+    "fs": "0.0.2",
+    "graphql": "^15.4.0",
+    "next": "^10.0.3",
+    "notistack": "^1.0.2",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-intersection-observer": "^8.28.6",
-    "shopify-buy": "^2.11.0",
-    "styled-components": "^5.2.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-intersection-observer": "^8.31.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.11.1",
-    "eslint": "^7.8.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0"
+    "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
